[package]
name = "radiance"
description = "Video art software designed for live performance"
version = "0.1.0"
authors = ["Zach Banks <zjbanks@gmail.com>", "Eric Van Albert <eric@van.al>"]
homepage = "https://radiance.video"
repository = "https://github.com/zbanks/radiance"
edition = "2021"
license-file = "LICENSE"
default-run = "radiance"

[lib]
name = "radiance"
path = "src/lib/mod.rs"

[[bin]]
name = "radiance"
path = "src/bin/main.rs"

[[bench]]
name = "beat_tracking_test"
harness = false

[dependencies]
env_logger = "0.9"
log = "0.4"
rand = "0.8"
bytemuck = { version = "1.10", features = [ "derive" ] }
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"
base64 = "0.13"
nalgebra = { version = "0.31.0", features = [ "serde-serialize" ] }
rustfft = "6.0"
itertools = "0.10"
cpal = "0.16.0"
winit = "0.30.12"
wgpu = "27.0.1"
egui = { git = "https://github.com/ervanalb/egui", rev = "207bf8ad8708281fc4b14db49bdea152b228a38f" }
egui-winit = { git = "https://github.com/ervanalb/egui", rev = "207bf8ad8708281fc4b14db49bdea152b228a38f" }
egui-wgpu = { git = "https://github.com/ervanalb/egui", rev = "207bf8ad8708281fc4b14db49bdea152b228a38f" }
#egui = "0.33.2"
#egui-winit = "0.33.2"
#egui-wgpu = "0.33.2"
pollster = "0.4.0"
derive_more = "0.99"
image = "0.24"
directories = "6.0.0"

# mpv / MovieNode dependencies
libmpv = { git = "https://github.com/ervanalb/libmpv-rs", rev = "189f5e45df40ec72cc9047e0b5ccb8b457b9735a", features = ["render"]}
libmpv-sys = { git = "git+https://github.com/ervanalb/libmpv-rs", rev="189f5e45df40ec72cc9047e0b5ccb8b457b9735a"}
surfman = { version = "0.7.0", features = ["sm-x11"] }
glow = "0.12.1"
crossbeam = "0.8.2"


# For memory profiling (see also src/bin/main.rs)
#[dependencies.jemallocator]
#version = "0.3.2"
#features = ["profiling"]

[dev-dependencies]
wav = "1.0"

[build-dependencies]
naga = { version = "27.0.3", features = ["wgsl-in"] }

[profile.dev]
opt-level = 1

[features]
default = ["mpv"]
mpv = []
